; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pnp/extr_core.c_pnp_release_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pnp/extr_core.c_pnp_release_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.pnp_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*)* @pnp_release_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pnp_release_device(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.pnp_dev*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %4 = load %struct.device*, %struct.device** %2, align 8
  %5 = call %struct.pnp_dev* @to_pnp_dev(%struct.device* %4)
  store %struct.pnp_dev* %5, %struct.pnp_dev** %3, align 8
  %6 = load %struct.pnp_dev*, %struct.pnp_dev** %3, align 8
  %7 = call i32 @pnp_free_ids(%struct.pnp_dev* %6)
  %8 = load %struct.pnp_dev*, %struct.pnp_dev** %3, align 8
  %9 = call i32 @pnp_free_resources(%struct.pnp_dev* %8)
  %10 = load %struct.pnp_dev*, %struct.pnp_dev** %3, align 8
  %11 = call i32 @pnp_free_options(%struct.pnp_dev* %10)
  %12 = load %struct.pnp_dev*, %struct.pnp_dev** %3, align 8
  %13 = call i32 @kfree(%struct.pnp_dev* %12)
  ret void
}

declare dso_local %struct.pnp_dev* @to_pnp_dev(%struct.device*) #1

declare dso_local i32 @pnp_free_ids(%struct.pnp_dev*) #1

declare dso_local i32 @pnp_free_resources(%struct.pnp_dev*) #1

declare dso_local i32 @pnp_free_options(%struct.pnp_dev*) #1

declare dso_local i32 @kfree(%struct.pnp_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
